style(Pagination): refactor layout to avoid UX shifting

--- a/src/Pagination/index.scss
+++ b/src/Pagination/index.scss
@@ -1,17 +1,29 @@
 .nds-pagination {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  --page-min-size: 1.5em;
   color: var(--theme-primary);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-  ul {
-    list-style-type: none;
-  }
   ul,
   li {
     text-indent: 0;
     margin: 0;
     padding: 0;
+  }
+
+  ul {
+    list-style-type: none;
+    display: grid;
+    grid-auto-flow: column;
+    justify-items: center;
+    align-items: center;
+    gap: var(--space-xxs);
+
+    // Every column should be the same width as the widest item to prevent
+    // UX shifting when paging between single, double, tripple, (or more)
+    grid-auto-columns: 1fr;
+    width: max-content;
   }
 }
 
@@ -21,9 +33,9 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  height: rem(28px);
-  min-width: rem(28px);
-  border-radius: rem(28px);
+  height: var(--page-min-size);
+  min-width: var(--page-min-size);
+  border-radius: var(--page-min-size);
   padding: 0 var(--space-xs);
 }
 
